# tablediff

./: .gitignore  BRIEF.md  README.md  SETUP.md  generate-sample.py  pyproject.toml
src/tablediff/: cli.py  engine.py
src/tablediff/adapters/: __init__.py  base.py
src/tablediff/renderers/: __init__.py  summary.py
tablediff/: cli.py  diffing.py  engine.py  examples.py  models.py
tablediff/adapters/: __init__.py  default.py  duckdb.py
tablediff/renderers/: __init__.py  summary.py
tests/: checks.md  conftest.py  test_adapter_duckdb.py  test_engine.py  test_summary_renderer.py
