[project]
name = "tablediff"
version = "0.1.0"
description = "CLI tool for data diffing between two tables"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
tablediff = "tablediff.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tablediff*"]

[tool.uv]
package = true
